--- a/index.html
+++ b/index.html
@@ -7,19 +7,30 @@
 
 	<!-- Naše vlastní CSS -->
 	<link rel="stylesheet" href="style.css">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
 	<!-- Hlavička -->
-		<img src="images/logo.svg" alt="logo Skvělá cukrárna">
 
-		<ul>
+	<header class="hlavicka">
+
+		<img class="logo" src="images/logo.svg" alt="logo Skvělá cukrárna">
+
+		<ul class="menu">
 			<li><a href="#">Nabídka dortů</a></li>
 			<li><a href="#">Blog</a></li>
 			<li><a href="#">O nás</a></li>
 			<li><a href="#">Kontakt</a></li>
 			<li><a href="#">Online objednávka</a></li>
 		</ul>
+
+	</header>
+
 
 
 
