--- a/index.html
+++ b/index.html
@@ -21,26 +21,31 @@
 
 		<img class="logo" src="images/logo.svg" alt="logo Skvělá cukrárna">
 
-		<ul class="menu">
-			<li><a href="#">Nabídka dortů</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">O nás</a></li>
-			<li><a href="#">Kontakt</a></li>
-			<li><a href="#">Online objednávka</a></li>
-		</ul>
+
+			<ul class="menu">
+				<li><a href="#">Nabídka dortů</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">O nás</a></li>
+				<li><a href="#">Kontakt</a></li>
+				<li><a href="#">Online objednávka</a></li>
+			</ul>
 
 	</header>
 
 
-
-
-
 	<!-- Hero sekce s obrázkem a hlavním nadpisem -->
-		<h1>Sladké potěšení z&nbsp;kvalitních surovin</h1>
 
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-		</p>
+	<section class="hero">
+
+		<div class="obsah">
+
+			<h1>Sladké potěšení <br>z&nbsp;kvalitních surovin</h1>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed <br>do eiusmod tempor incididunt ut labore et dolore magnabr <br>aliqua. Ut enim ad minim veniam.</p>
+
+		</div>
+	</section>
+
 
 
 
