--- a/index.html
+++ b/index.html
@@ -51,16 +51,27 @@
 
 
 	<!-- sekce Vítejte v naší cukrárně -->
-		<!-- levý sloupec -->
+
+	<section class="vitaci">
+
+		<article class="leva">
+
 			<h2>Vítejte v naší cukrárně</h2>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus officia minima reiciendis beatae, quo consequatur blanditiis molestiae laborum, at porro ipsum soluta temporibus.</p>
+	
+			<div class="tlacitko"><a class="tlacitko" href="#">Naše výrobky</a></div>
 
-			<a href="#">Naše výrobky</a>
+		</article>
 
-		<!-- pravý sloupec -->
+		<aside class="prava">
+
 			<img src="images/cukrarka.jpg" alt="cukrářka">
+
+		</aside>
+
+	</section>
 
 
 
