Přidána sekce Dnešní nabídka

--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
 	</section>
 
 
-
-
-
 	<!-- sekce Vítejte v naší cukrárně -->
 
 	<section class="vitaci">
@@ -77,30 +74,43 @@
 
 
 	<!-- sekce Dnešní nabídka -->
-		<h2>Dnešní nabídka</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
-		<!-- produkt 1 -->
-			<img src="images/dort.jpg" alt="Šlehačkový dort s malinami">
-			<h3>Malinový dort</h3>
+	<section class="nabidka">
+
+		<div class="text">
+			<h2>Dnešní nabídka</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+		</div>
 
-		<!-- produkt 2 -->
-			<img src="images/livance.jpg" alt="Lívance s ovocem">
-			<h3>Lívance s ovocem</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+	
+		<div class="produkty">
+			<div class="produkt jedna">
+				<img src="images/dort.jpg" alt="Šlehačkový dort s malinami">
+				<h3>Malinový dort</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			</div>
 
-		<!-- produkt 3 -->
-			<img src="images/kolac.jpg" alt="Dýňový koláč">
-			<h3>Dýňový koláč</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			<div class="produkt dva">
+				<img src="images/livance.jpg" alt="Lívance s ovocem">
+				<h3>Lívance s ovocem</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			</div>
 
-		<!-- produkt 4 -->
-			<img src="images/buchticka.jpg" alt="Buchtička s polevou">
-			<h3>Buchtička s polevou</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			<div class="produkt tri">
+				<img src="images/kolac.jpg" alt="Dýňový koláč">
+				<h3>Dýňový koláč</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			</div>
 
+			<div class="produkt ctyri">
+				<img src="images/buchticka.jpg" alt="Buchtička s polevou">
+				<h3>Buchtička s polevou</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			</div>
 
+		</div>
+
+	</section>	
 
 
 
