--- a/index.html
+++ b/index.html
@@ -112,26 +112,39 @@
 
 	</section>	
 
-
-
+	
+	
+	
 	<!-- sekce Náš přístup k pečení -->
-		<!-- levý sloupec -->
+
+
+	<section class="peceni">
+
+		<aside class="prava">
+
 			<img src="images/peceni.jpg" alt="pečení">
 
-		<!-- pravý sloupec -->
+		</aside>
+
+		<article class="leva">
+
 			<h2>Náš přístup k pečení</h2>
 
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste dolorem possimus facilis quae minima autem eius consequuntur quia magnam assumenda, repudiandae commodi deleniti alias, ipsum, quisquam aliquid iusto tenetur suscipit.</p>
 
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus officia minima reiciendis beatae, quo consequatur blanditiis molestiae laborum, at porro ipsum soluta temporibus.</p>
 
+		</article>
+
+	</section>
 
 
 
 	<!-- Patička -->
+
+	<footer class="paticka">
 		<p>©2020, Czechitas. Vytvořeno pro kurz Staň se kóderkou.</p>
-
-
+	</footer>
 
 </body>
 </html>
